other-vpol/require-storageclass/.chainsaw-test/ss-good.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss01
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss02
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
